developer/src/kmc-package/test/fixtures/invalid/hint_js_keyboard_file_has_no_touch_targets.js
KeymanWeb.KR(new Keyboard_hint_js_keyboard_file_has_no_touch_targets());function Keyboard_hint_js_keyboard_file_has_no_touch_targets(){this._v=(typeof keyman!="undefined"&&typeof keyman.version=="string")?parseInt(keyman.version,10):9;this.KI="Keyboard_hint_js_keyboard_file_has_no_touch_targets";this.KN="hint_js_keyboard_file_has_no_touch_targets";this.KMINVER="9.0";this.KV=null;this.KDU=0;this.KH='';this.KM=0;this.KBVER="1.0";this.KMBM=0x0;this.KVER="17.0.184.0";this.KVS=[];this.gs=function(t,e) {return this.g0(t,e);};this.gs=function(t,e) {return this.g0(t,e);};this.g0=function(t,e) {var k=KeymanWeb,r=0,m=0;return r;};}